# CochlearModel

./: CMakeLists.txt  CMakeSettings.json  README.md
CMakeModules/: ModuleInstall.cmake
assets/: AudioLabCM.def
include/: AudioGramCreator.h  AudioLabCM.h  ComplexJNDProfile.h  ConfigFileHandler.h  HFunction.h  Log.h  MEXHandler.h  OutputBuffer.h  Resource.h  SubModel.h  TBin.h  TBin.tpp  TFIRPassTypes.h  VirtualHandler.h  aux_gpu.h  bin.h  cochlea.cuh  cochlea_common.h  cochlea_utils.h  const.h  cvector.cpp  cvector.h  debug.h  error.h  intellisense.h  memoryTest.h  mex_global_resources.h  model.h  mutual.h  mxstreambuf.h  ode.h  params.h  smaller_than.h  solver.h  state.h  stdafx.h  tridiag.h  vector_old.h
include/IowaHillsFilters/: CplxDMath.hpp  FFTCode.h  FIRFilterCode.h  FilterKitMain.h  FreqSamplingCode.h  LowPassPrototypes.h  NewParksMcClellan.h  PFiftyOneRevC.h  QuadRootsCode.h  calcBoundaries.txt
include/firpm/: band.h  pm.h  util.h
include/mexplus/: mexplus.h  mxarray.h  mxtypes.h
src/: AudioGramCreator.cpp  AudioLabCM.cpp  ComplexJNDProfile.cpp  ConfigFileHandler.cpp  HFunction.cpp  Log.cpp  MEXHandler.cpp  SubModel.cpp  VirtualHandler.cpp  aux_gpu.cpp  bin.cpp  cochlea.cu  cochlea_gold.cpp  cochlea_utils.cpp  debug.cpp  error.cpp  memoryTest.cpp  mex_global_resources.cpp  model.cpp  mutual.cpp  ode.cpp  params.cpp  smaller_than.cpp  solver.cpp  state.cpp  stdafx.cpp  tridiag.cpp
src/IowaHillsFilters/: FFTCode.cpp  FIRFilterCode.cpp  FilterKitMain.cpp  FreqSamplingCode.cpp  IIRFilterCode.cpp  LowPassPrototypes.cpp  LowPassRoots.cpp  NewParksMcClellan.cpp  PFiftyOneRevC.cpp  QuadRootsCode.cpp
src/firpm/: band.cpp  barycentric.cpp  cheby.cpp  eigenvalue.cpp  pm.cpp
